<?xml version="1.0" encoding="utf-8"?><!--
 Tencent is pleased to support the open source community by making QMUI_Android available.

 Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.

 Licensed under the MIT License (the "License"); you may not use this file except in
 compliance with the License. You may obtain a copy of the License at

 http://opensource.org/licenses/MIT

 Unless required by applicable law or agreed to in writing, software distributed under the License is
 distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 either express or implied. See the License for the specific language governing permissions and
 limitations under the License.
-->

<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_white"
    app:qmui_skin_background="?attr/app_skin_common_background">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.qmuiteam.qmui.widget.QMUIFloatLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:qmui_childHorizontalSpacing="20dp"
        app:qmui_childVerticalSpacing="20dp"
        android:padding="20dp">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn1"
            style="@style/QDRoundButtonStyle"
            android:text="@string/popup_normal_action_button_text_show" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn2"
            style="@style/QDRoundButtonStyle"
            android:layout_centerInParent="true"
            android:text="@string/popup_list_action_button_text_show" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn3"
            style="@style/QDRoundButtonStyle"
            android:text="@string/popup_dim_amount_action_button_text_show" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn4"
            style="@style/QDRoundButtonStyle"
            android:text="@string/popup_dynamic_update_content" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn5"
            style="@style/QDRoundButtonStyle"
            android:text="@string/fullscreen_popup_with_close_btn" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn6"
            style="@style/QDRoundButtonStyle"
            android:text="@string/fullscreen_popup_with_input" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn7"
            style="@style/QDRoundButtonStyle"
            android:text="@string/quick_action" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/actionBtn8"
            style="@style/QDRoundButtonStyle"
            android:text="@string/quick_action_more" />

    </com.qmuiteam.qmui.widget.QMUIFloatLayout>


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>

