<?xml version="1.0" encoding="utf-8"?>
<!--
 Tencent is pleased to support the open source community by making QMUI_Android available.

 Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.

 Licensed under the MIT License (the "License"); you may not use this file except in
 compliance with the License. You may obtain a copy of the License at

 http://opensource.org/licenses/MIT

 Unless required by applicable law or agreed to in writing, software distributed under the License is
 distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 either express or implied. See the License for the specific language governing permissions and
 limitations under the License.
-->

<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"/>

    <ScrollView
        android:id="@+id/contentWrap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/qmui_config_color_white"
        app:qmui_skin_background="?attr/app_skin_common_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <!-- 创建一张指定大小的纯色图片，支持圆角 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/drawableHelper_solid_image_title"/>

            <ImageView
                android:id="@+id/solidImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/drawableHelper_column_marginBottom"
                android:contentDescription="@string/common_example"/>

            <!-- 创建一张圆形渐变图片，支持圆角 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/drawableHelper_circle_gradient_title"/>

            <ImageView
                android:id="@+id/circleGradient"
                android:layout_width="@dimen/drawableHelper_common_shape_size"
                android:layout_height="@dimen/drawableHelper_common_shape_size"
                android:layout_marginBottom="@dimen/drawableHelper_column_marginBottom"
                android:contentDescription="@string/common_example"/>

            <!-- 设置 Drawable 的颜色 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/drawableHelper_tint_color_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/drawableHelper_column_marginBottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tintColorOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/common_example"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/colorHelper_square_margin"
                    android:contentDescription="@null"
                    android:src="@mipmap/arrowright"/>

                <ImageView
                    android:id="@+id/tintColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/colorHelper_square_margin"
                    android:contentDescription="@string/common_example"/>

            </LinearLayout>

            <!-- 创建带上分隔线或下分隔线的 Drawable -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/drawableHelper_separator_title"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/drawableHelper_common_shape_size"
                android:layout_marginBottom="@dimen/drawableHelper_column_marginBottom"/>

            <!-- 从一个 View 创建 Bitmap -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/drawableHelper_create_from_view_title"/>

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/createFromView"
                style="@style/QDRoundButtonStyle"
                android:text="@string/drawableHelper_create_from_view_button"/>

        </LinearLayout>
    </ScrollView>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>
