<?xml version="1.0" encoding="utf-8"?>
<!--
 Tencent is pleased to support the open source community by making QMUI_Android available.

 Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.

 Licensed under the MIT License (the "License"); you may not use this file except in
 compliance with the License. You may obtain a copy of the License at

 http://opensource.org/licenses/MIT

 Unless required by applicable law or agreed to in writing, software distributed under the License is
 distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 either express or implied. See the License for the specific language governing permissions and
 limitations under the License.
-->

<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:app="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/contentWrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_white"
        android:fitsSystemWindows="true"
        app:qmui_skin_background="?attr/app_skin_common_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/circularImageView_item_xml_circle_title"/>

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/example_image6"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_is_circle="true"
                app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
                app:qmui_selected_border_width="1px"
                app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8"/>

            <TextView
                style="@style/QDCommonTitle"
                android:layout_marginTop="50dp"
                android:text="@string/circularImageView_item_xml_oval_title"/>

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/example_image6"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_is_oval="true"
                app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
                app:qmui_selected_border_width="1px"
                app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8"/>

            <TextView
                style="@style/QDCommonTitle"
                android:layout_marginTop="50dp"
                android:text="@string/circularImageView_item_xml_round_rect_title"/>

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/example_image6"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_corner_radius="15dp"
                app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
                app:qmui_selected_border_width="1px"
                app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8"/>

            <TextView
                style="@style/QDCommonTitle"
                android:layout_marginTop="50dp"
                android:text="@string/circularImageView_modify_tip"/>

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:id="@+id/radiusImageView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/example_image6"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_corner_radius="15dp"
                app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
                app:qmui_selected_border_width="1px"
                app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8"/>

        </LinearLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
