<?xml version="1.0" encoding="utf-8"?>
<!--
 Tencent is pleased to support the open source community by making QMUI_Android available.

 Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.

 Licensed under the MIT License (the "License"); you may not use this file except in
 compliance with the License. You may obtain a copy of the License at

 http://opensource.org/licenses/MIT

 Unless required by applicable law or agreed to in writing, software distributed under the License is
 distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 either express or implied. See the License for the specific language governing permissions and
 limitations under the License.
-->

<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"/>

    <ScrollView
        android:id="@+id/contentWrap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/qmui_config_color_white"
        app:qmui_skin_background="?attr/app_skin_common_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <!-- 设置颜色的 alpha 值 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/colorHelper_alpha_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/colorHelper_column_marginBottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="@dimen/colorHelper_square_length"
                        android:layout_height="@dimen/colorHelper_square_length"
                        android:background="@color/colorHelper_square_alpha_background"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/colorHelper_square_desc_marginTop"
                        android:text="@string/colorHelper_squqre_origin"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/colorHelper_square_margin"
                    android:contentDescription="@null"
                    android:src="@mipmap/arrowright"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/square_alpha"
                        android:layout_width="@dimen/colorHelper_square_length"
                        android:layout_height="@dimen/colorHelper_square_length"/>

                    <TextView
                        android:id="@+id/square_desc_alpha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/colorHelper_square_desc_marginTop"/>

                </LinearLayout>
            </LinearLayout>

            <!-- 根据比例，在两个 color 值之间计算出一个 color 值 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/colorHelper_ratio_title"/>

            <LinearLayout
                android:id="@+id/ratioSeekBarWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/colorHelper_column_marginBottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/colorHelper_square_length"
                    android:layout_height="@dimen/colorHelper_square_length"
                    android:background="@color/colorHelper_square_from_ratio_background"/>

                <SeekBar
                    android:id="@+id/ratioSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>

                <View
                    android:layout_width="@dimen/colorHelper_square_length"
                    android:layout_height="@dimen/colorHelper_square_length"
                    android:background="@color/colorHelper_square_to_ratio_background"/>

            </LinearLayout>

            <!-- 将 color 颜色值转换为字符串 -->
            <TextView
                style="@style/QDCommonTitle"
                android:text="@string/colorHelper_transform_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/colorHelper_column_marginBottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transformTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_color_blue"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>
